Closed Bug 888159 Opened 13 years ago Closed 13 years ago

mfbt fail to compile using Visual Studio 2013

Categories

(Firefox Build System :: General, defect)

x86
Windows 8
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla25

People

(Reporter: xavier114fch, Assigned: xavier114fch)

References

Details

Attachments

(2 files, 1 obsolete file)

I am using Visual Studio 2013 Preview to build Firefox and found that mfbt cannot be built. Attached is the build log.
Attached file Error log —
Depends on: 888158
no mbft issue. If using -j1 for pymake, it will resolve this.
Component: MFBT → Build Config
And, this issue may be a bug by preview version.
I have tried pymake and also mach build using -j1 and still got this. c:/mozilla-inbound/mfbt/decimal/Decimal.cpp(687) : error C2039: 'isfinite' : is not a member of 'std' c:/mozilla-inbound/mfbt/decimal/Decimal.cpp(690) : error C2039: 'isinf' : is not a member of 'std'
Attachment #770329 - Flags: review?(jwalden+bmo)
Assignee: nobody → xavier114fch
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 770329 [details] [diff] [review] Patch to raise MSC version to 1800 >-#if defined(_MSC_VER) && (_MSC_VER <= 1700) >+#if defined(_MSC_VER) && (_MSC_VER <= 1800) I think we should remove the version check until we actually know the MSVC version which supports these functions.
Attachment #770329 - Attachment is obsolete: true
Attachment #770329 - Flags: review?(jwalden+bmo)
Attachment #770645 - Flags: review?(jwalden+bmo)
Comment on attachment 770645 [details] [diff] [review] Remove MSC version Review of attachment 770645 [details] [diff] [review]: ----------------------------------------------------------------- ::: mfbt/decimal/moz-decimal-utils.h @@ +38,5 @@ > private: \ > ClassName(const ClassName&) MOZ_DELETE; \ > void operator=(const ClassName&) MOZ_DELETE; > > +#if defined(_MSC_VER) Yeah, probably fair enough removing the version-check.
Attachment #770645 - Flags: review?(jwalden+bmo) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Blocks: VC12
Depends on: 1007050
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: