Bug 888159 - Fix Decimap.cpp building on VS2013. r=Waldo